fixed display overflow, = causing div by 0, etc

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body{
     flex: 1 1 0;
 }
 .btn{
-    background: #00b4d8;
+    background: #336cad;
     color: whitesmoke;
     border: solid 4px black;
     border-style: ridge;
@@ -70,7 +70,7 @@ body{
     transform: translateY(4px);
   }
 .oper{
-    background-color:#48cae4;
+    background-color:#19a3c5f5;
     color:#390099;
 }
 .special{
